--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "search-at-point",
   "main": "./lib/search-at-point",
-  "version": "0.1.0",
-  "description": "A short description of your package",
-  "keywords": ["search", "point", "lookup", "google"],
+  "version": "0.1.1",
+  "description": "Search the Google/Stackoverflow at point or by selection",
+  "keywords": ["search", "point", "lookup", "google", "stackoverflow"],
   "author": "Guy Lyons",
   "activationCommands": {
-    "atom-workspace": "search-at-point:toggle"
+    "atom-workspace": "search-at-point:search"
   },
   "repository": "https://github.com/guylyons/search-at-point",
   "license": "MIT",
