--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "search-at-point",
   "main": "./lib/search-at-point",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "Search multiple search engines at point or by selection",
-  "keywords": ["search", "point", "lookup", "google", "stackoverflow", "mdn"],
+  "keywords": [
+    "search",
+    "point",
+    "lookup",
+    "google",
+    "stackoverflow",
+    "mdn"
+  ],
   "author": "Guy Lyons",
   "activationCommands": {
     "atom-workspace": "search-at-point:search"
